<resources>
    <string name="app_name">Easy Look</string>

    <string name="navigation_view_header_title">Todo</string>

    <string name="tasks_header_image_content_description">Tasks header image</string>

    <string name="video_title">Video</string>
    <string name="music_title">Music</string>
    <string name="novel_title">Novel</string>
    <string name="ai_title">ChatGPT</string>
    <string name="image_title">Image</string>

    <!-- 通用 -->
    <string name="menu_other">other</string>

    <string name="unknown_error">An unknown error occured</string>
    <string name="link">链接</string>
    <string name="search">search</string>
    <string name="settings">settings</string>
    <string name="exit">exit</string>
    <string name="warning">提醒</string>
    <string name="exit_prompt">You are force to be offline</string>
    <string name="press_again_to_exit">再按一次退出%1$s</string>
    <string name="ok">OK</string>

    <!--video_title-->


    <!--music_title所用-->

    <!--播放模式-->
    <string name="play_mode_repeat">repeat playback</string>
    <string name="play_mode_repeat_one">repeat one playback</string>
    <string name="play_mode_shuffle">shuffle playback</string>

    <string name="music_home_tab_my">My</string>
    <!-- 搜索 start -->
    <string name="music_home_tab_search">Search</string>
    <!-- 我的 start -->
    <string name="item_local">local song</string>
    <string name="song_num">%1$d song</string>
    <string name="default_num">0 song</string>


    <string name="play_history">play history</string>
    <string name="collection">collection</string>
    <string name="playlist">歌单</string>
    <string name="playlist_songs">歌单歌曲</string>
    <string name="music_home_tab_charts">Charts</string>
    <!-- 排行榜 start -->
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>

    <!--歌曲弹框处理事项-->
    <string name="popup_song_detail">歌曲详情</string>
    <string name="popup_play_next">下一首播放</string>
    <string name="popup_add_to_collection">添加到收藏</string>
    <string name="cancel_to_add">取消添加</string>
    <string name="popup_add_to_playlist">添加到歌单</string>
    <string name="popup_detail">查看歌曲信息</string>
    <string name="popup_download">下载歌曲</string>
    <string name="popup_cache">缓存歌曲</string>
    <string name="popup_delete">删除</string>
    <string name="popup_artist">歌手</string>
    <string name="popup_album">专辑</string>

    <!--novel_title-->
    <!--ai_title-->
    <string name="ai_home_tab_ai_collection">collection</string>
    <string name="ai__home_tab_ai_list">Market</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_tasks_all">You have no tasks!</string>
    <string name="no_tasks_image_content_description">No tasks image</string>


    <string name="skip_back_10s">Skip back 10s</string>
    <string name="skip_forward_10s">Skip forward 10s</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>

    <string name="menu_music_queue">Queue</string>
    <string name="album_art_alt">Album art</string>
    <string name="duration_unknown">--:--</string>
    <string name="duration_format">%d:%02d</string>

    <string name="cast_context_error">Failed to get Cast context. Try updating Google Play Services and restart the app.</string>


    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>


    <!--提示-->
    <string name="error_connection">网络连接异常，请稍后重试！</string>
    <string name="data_isNull">%1$s数据为空！</string>
    <string name="song_no_copyright_free">歌曲无版权</string>

    <string name="lyric_error">歌词获取失败</string>
    <!--元素共享-->
    <string name="transition_name_title" translatable="false">title</string>
    <string name="transition_name_cover" translatable="false">cover</string>
    <string name="transition_name_time" translatable="false">time</string>
    <string name="transition_name_duration" translatable="false">duration</string>
    <string name="transition_name_progress" translatable="false">progress</string>
    <string name="transition_name_fab" translatable="false">fab</string>
    <string name="play_vector_path" translatable="false">M6,5 l12,7 l0,0 l-12,0z M6,12 l12,0 l0,0 l-12,7z</string>
    <string name="pause_vector_path" translatable="false">M5,6 l14,0 l0,4 l-14,0z M5,14 l14,0 l0,4 l-14,0z</string>
</resources>