<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_4"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_2"
                app:cardElevation="@dimen/dp_2"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <cn.vce.easylook.feature_music.ui.LocalItemView
                        android:id="@+id/localView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_56"
                        android:gravity="center_vertical"
                        app:iv_icon="@drawable/item_music"
                        app:iv_icon_color="@color/blue_800"
                        app:tv_desc="@string/default_num"
                        app:tv_name="@string/item_local" />

                    <cn.vce.easylook.feature_music.ui.LocalItemView
                        android:id="@+id/playHistoryView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_56"
                        android:gravity="center_vertical"
                        app:iv_icon="@drawable/item_music"
                        app:iv_icon_color="@color/blue_800"
                        app:tv_desc="@string/default_num"
                        app:tv_name="@string/play_history" />

                    <cn.vce.easylook.feature_music.ui.LocalItemView
                        android:id="@+id/collectionView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_56"
                        android:gravity="center_vertical"
                        app:iv_icon="@drawable/item_music"
                        app:iv_icon_color="@color/blue_800"
                        app:tv_desc="@string/default_num"
                        app:tv_name="@string/collection" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_4"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="@dimen/dp_2"
                app:cardElevation="@dimen/dp_2"
                app:cardUseCompatPadding="true"></androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>