<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:transitionName="@string/transition_name_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/pane"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/iconColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/cover"
        app:layout_constraintHeight_percent="0.08"/>

    <LinearLayout
        android:id="@+id/pane_anchor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/iconColor"
        android:orientation="vertical"
        android:padding="@dimen/dp_16"
        android:transitionGroup="true"
        app:layout_constraintBottom_toBottomOf="@+id/cover"
        app:layout_constraintEnd_toEndOf="@+id/pane"
        app:layout_constraintStart_toStartOf="@+id/pane"
        app:layout_constraintTop_toTopOf="@+id/pane">

        <include
            android:id="@+id/title"
            layout="@layout/track_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:transitionName="@string/transition_name_time"
                tools:text="02:30" />

            <!--<cn.vce.easylook.feature_music.ui.ProgressView
                android:id="@+id/progress"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_weight="1"
                android:transitionName="@string/transition_name_progress" />-->

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:transitionName="@string/transition_name_duration"
                tools:text="02:30" />

            <Space
                android:id="@+id/fab_placeholder"
                android:layout_width="@dimen/dp_40"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:text="My favorites"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:text="102 songs"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:transitionGroup="true"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="@+id/pane_anchor"
        app:layout_constraintBottom_toBottomOf="@+id/counter">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_play_animatable"
            android:transitionName="@string/transition_name_fab"
            app:fabSize="mini"/>

        <ImageView
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_more_vert_white_24dp" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tracks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
